chore: add scalar documentation for endpoints
