# backend/internal/handlers/users/users.go
@@ -9,6 +9,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary GET a user from firestore by their ID
+// @Description Returns user information
+// @Tags Users
+// @Produce json
+// @Success 200 {object} models.User
+// @Router /api/v1/users/{id} [get]
+// Returns the user based on an id
 func GetUser(userRepo *services.UserService) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		user, err := userRepo.GetUser(c.Request.Context(), c.Param("id"))
@@ -28,6 +35,15 @@ func GetUser(userRepo *services.UserService) gin.HandlerFunc {
 	}
 }
 
+// @Summary Create a user and returns their ID
+// @Description Creates a new user
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param user body models.CreateUser true "User info"
+// @Success 201 {object} ReturnID
+// @Router /api/v1/users [post]
+// Creates a new user in firestore
 func CreateUser(userRepo *services.UserService) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var content models.CreateUser
